--- a/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor.csproj
+++ b/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <StartupObject>SimpleDragAndDropWithBlazor.Program</StartupObject>
   </PropertyGroup>
 
 </Project>
